included more pictures and tried to fix center alignment
Was not able to fix center alignment for bear picture or paragraphs.

--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -1,19 +1,25 @@
 body{
 	font-family: Helvetica, sans-serif;
+	margin: 0;
+ 	padding: 0;
 }
 
 .container{
-	align-items: center;
-}
-
-.container img{
-	align-items: center;
+	display: inline-block;
+	margin-left:auto;
+  	margin-right:auto;
+	margin-top:1rem;
+	max-width: 720px;
+	padding: .75rem;
+	
 }
 
 h1{
 	color:white;
 	background: black;
 	font-family: serif;
+	margin:0 .25rem;
+    padding:.25rem;
 }
 
 .header{
@@ -33,6 +39,8 @@ h1{
   }
 
   .main-nav-list{
+  	margin: 0rem;
+    padding:0rem;
   	list-style: none;
   	display:flex;
   }
@@ -43,16 +51,15 @@ h1{
 }
 
 p{
-	margin:0 auto;
+	margin:1.5rem 0;
   	max-width: 500px;
-  	padding: .75rem;
 	}
 
-
-.port {
-	margin-top: 1.5rem;
-}
-strong {
-	margin-left: auto;
-	margin-right:auto;
-}
+.gallary {
+  display: grid;
+  grid-gap: 1.5rem;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 1rem;
+  }
